test/expected/large/modelstudio/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.com/duname: capui
    foo.com/duversion: 1.20.116-20190924.1569376771332
    foo.com/version: 1.20.116
  labels:
    app.kubernetes.io/name: modelstudio
    helm.sh/chart: modelstudio-1.20.116
  name: modelstudio
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: modelstudio
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: modelstudio
        app.kubernetes.io/name: modelstudio
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        - configMapRef:
            name: foo-java-config
        image: repo.foo.com/mlrning-125.0.0-x64_redhat_linux_7-docker-prod/foo-visual-pipeline:1.20.116-20190924.1569376771332
        imagePullPolicy: IfNotPresent
        name: modelstudio
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
      initContainers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        image: docker.foo.com/yesbut/init-blocker:1.7
        name: init-blocker
