test/expected/large/modelstudio/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: capui
    foo.com/duversion: 1.20.116-20190924.1569376771332
    foo.com/version: 1.20.116
  labels:
    app.kubernetes.io/name: modelstudio
    helm.sh/chart: modelstudio-1.20.116
  name: modelstudio
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /ModelStudio
    - uri:
        prefix: /ModelStudio/
    route:
    - destination:
        host: modelstudio.peekay.svc.cluster.local
